--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@
 #/docs/conten/
 #/assets/check-error-icons.afphoto
 #/assets/Web-Components-Profile-Image.afphoto
+/Demo.Fonts/Demo-WPF-Anwendung.ps1
+/Demo.Fonts/Demo-WPF-Anwendung.txt
