--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # EXCULDE VSCODE WORKSPACE AND AFFINITY PHOTO FILES
 *.code-workspace
 *.afphoto
+*.lnk
 
 # EXCLUDE BACKUPS/LOGS FOLDER
 **/backup/
@@ -14,3 +15,4 @@
 #/assets/Web-Components-Profile-Image.afphoto
 /Demo.Fonts/Demo-WPF-Anwendung.ps1
 /Demo.Fonts/Demo-WPF-Anwendung.txt
+/Power.Ctrl.app/Power.Ctrl.app.lnk
