--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@
 /Demo.Fonts/Demo-WPF-Anwendung.txt
 /Power.Ctrl.app/Power.Ctrl.app.lnk
 /SysDaemon/TODO.TXT
+/SysDaemon/sysdaemon.main.log
+/SysDaemon/RunSystemJob.xml.txt
