--- a/.gitignore
+++ b/.gitignore
@@ -35,4 +35,5 @@
 /HashGen UI/v1.01.00/*
 # EXCLUDE SPECIFIC FILES/FOLDERS FOR "DAMSA"
 /DAMSA/*
-
+# EXCLUDE SPECIFIC FILES/FOLDERS FOR "WPF-XAML-Preview"
+/WPF-XAML-Preview/*
