--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,5 @@
 /DAMSA/*
 # EXCLUDE SPECIFIC FILES/FOLDERS FOR "WPF-XAML-Preview"
 /WPF-XAML-Preview/*
+# EXCLUDE SPECIFIC FILES/FOLDERS FOR "WinGet Automator"
+/WinGet Automator/*
