Add GitHub Actions workflow
Add GitHub Actions workflow for Context Menu Switcher releases

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 
 # EXCLUDE SPECIFIC FILES/FOLDERS
 App Development Instructions.txt
+github-actions-anleitung.md
 #*/docs/conten/
 #/docs/conten/
 #/assets/check-error-icons.afphoto
