--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 # EXCLUDE SPECIFIC FILES/FOLDERS
 App Development Instructions.txt
 github-actions-anleitung.md
+context-menu-switcher-release.yml
 #*/docs/conten/
 #/docs/conten/
 #/assets/check-error-icons.afphoto
