--- a/.github/workflows/context-menu-switcher-release.yml
+++ b/.github/workflows/context-menu-switcher-release.yml
@@ -1,25 +1,47 @@
 # yaml-language-server: $schema=https://json.schemastore.org/github-workflow.json
 
 # =============================================================================
-# GITHUB ACTIONS WORKFLOW FOR CONTEXT MENU SWITCHER RELEASES
+# ENHANCED GITHUB ACTIONS WORKFLOW FOR CONTEXT MENU SWITCHER RELEASES
 # =============================================================================
-# This file defines an automated workflow that runs when a tag starting 
-# with "cms-" is created (e.g. cms-v1.0.1)
+# This file defines an automated workflow that can be triggered in two ways:
+# 1. Automatically when a tag starting with "cms-" is created (e.g. cms-v1.0.1)
+# 2. Manually through the GitHub Actions interface with custom parameters
 
 name: Context Menu Switcher Release
 
-# TRIGGER CONFIGURATION
+# TRIGGER CONFIGURATION - MULTIPLE TRIGGERS SUPPORTED
 # Defines when this workflow should be executed
 on:
+  # AUTOMATIC TRIGGER: Tag-based execution
   push:
     tags:
       - 'cms-*'  # Workflow starts only for tags beginning with "cms-"
                  # Examples: cms-v1.0.1, cms-v2.0.0, cms-beta-1
 
+  # MANUAL TRIGGER: Allows running workflow from GitHub Actions interface
+  workflow_dispatch:
+    inputs:
+      tag_name:
+        description: 'Tag name for the release (e.g., cms-v1.00.02)'
+        required: true
+        default: 'cms-v1.00.01'
+        type: string
+      create_tag:
+        description: 'Create the tag if it doesnt exist'
+        required: true
+        default: true
+        type: boolean
+      release_notes:
+        description: 'Additional release notes (optional)'
+        required: false
+        default: ''
+        type: string
+
 # PERMISSIONS
-# GitHub Actions requires explicit permission to create releases
+# GitHub Actions requires explicit permission to create releases and tags
 permissions:
   contents: write    # Allows creating and editing repository contents
+  actions: write     # Allows workflow management
 
 # JOB DEFINITION
 # A workflow can contain multiple jobs, here we have only one
@@ -27,9 +49,11 @@ jobs:
   release:
     runs-on: ubuntu-latest    # The workflow runs on an Ubuntu Linux server
     
-    # ADDITIONAL SECURITY CHECK
-    # Double-check that only cms-tags trigger this workflow
-    if: startsWith(github.ref, 'refs/tags/cms-')
+    # CONDITIONAL EXECUTION
+    # Execute for cms-tagged pushes OR manual dispatch
+    if: |
+      (github.event_name == 'push' && startsWith(github.ref, 'refs/tags/cms-')) ||
+      github.event_name == 'workflow_dispatch'
     
     # WORKFLOW STEPS
     # Each step is executed sequentially
@@ -40,7 +64,61 @@ jobs:
         uses: actions/checkout@v4    # Official GitHub Action for code download
         # After this step, all your repository files are available
 
-      # STEP 2: Create release package
+      # STEP 2: Setup variables for different trigger types
+      # Handle both automatic (tag push) and manual (workflow_dispatch) triggers
+      - name: Setup release variables
+        id: setup
+        run: |
+          # Determine tag name based on trigger type
+          if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
+            # Manual trigger - use user input
+            TAG_NAME="${{ github.event.inputs.tag_name }}"
+            echo "🔧 Manual trigger detected"
+            echo "📝 Using tag: $TAG_NAME"
+          else
+            # Automatic trigger - use pushed tag
+            TAG_NAME="${{ github.ref_name }}"
+            echo "🏷️ Automatic tag trigger detected"
+            echo "📝 Using tag: $TAG_NAME"
+          fi
+          
+          # Validate tag format
+          if [[ ! $TAG_NAME =~ ^cms-.*$ ]]; then
+            echo "❌ Error: Tag name must start with 'cms-'"
+            echo "❌ Provided: $TAG_NAME"
+            exit 1
+          fi
+          
+          # Export variables for later steps
+          echo "tag_name=$TAG_NAME" >> $GITHUB_OUTPUT
+          echo "✅ Tag validation successful: $TAG_NAME"
+
+      # STEP 3: Create tag if manual trigger and tag doesn't exist
+      # This step only runs for manual triggers when create_tag is enabled
+      - name: Create tag if manual trigger
+        if: |
+          github.event_name == 'workflow_dispatch' && 
+          github.event.inputs.create_tag == 'true'
+        run: |
+          TAG_NAME="${{ steps.setup.outputs.tag_name }}"
+          
+          # Configure Git with GitHub Actions bot identity
+          git config user.name "GitHub Actions Bot"
+          git config user.email "actions@github.com"
+          
+          # Check if tag already exists
+          if git rev-parse "$TAG_NAME" >/dev/null 2>&1; then
+            echo "⚠️ Tag $TAG_NAME already exists"
+            echo "ℹ️ Continuing with existing tag..."
+          else
+            # Create and push new tag
+            echo "🏷️ Creating new tag: $TAG_NAME"
+            git tag "$TAG_NAME"
+            git push origin "$TAG_NAME"
+            echo "✅ Tag created and pushed successfully"
+          fi
+
+      # STEP 4: Create release package
       # Only the Context Menu Switcher folder is packed into a ZIP package
       - name: Create Context Menu Switcher release package
         run: |
@@ -50,6 +128,14 @@ jobs:
           # Create temporary folder for the release
           mkdir -p release-temp/Context-Menu-Switcher
           echo "📁 Temporary release folder created"
+          
+          # Verify source folder exists
+          if [ ! -d "Context Menu Switcher" ]; then
+            echo "❌ Error: 'Context Menu Switcher' folder not found!"
+            echo "📂 Available folders:"
+            ls -la
+            exit 1
+          fi
           
           # IMPORTANT: Copy all files from the Context Menu Switcher folder
           # Folder name contains spaces, therefore quotes are necessary
@@ -70,19 +156,35 @@ jobs:
           # Confirmation and display ZIP file size
           echo "✅ ZIP file created:"
           ls -lh context-menu-switcher-release.zip
+          
+          # Verify ZIP file contents
+          echo "📦 ZIP file contents:"
+          unzip -l context-menu-switcher-release.zip
 
-      # STEP 3: Create GitHub release
+      # STEP 5: Create GitHub release with enhanced descriptions
       # This is the most important step - the actual release is created here
       - name: Create GitHub release with assets
         uses: softprops/action-gh-release@v1    # Proven third-party action for releases
         with:
+          # DYNAMIC TAG NAME handling for both trigger types
+          tag_name: ${{ steps.setup.outputs.tag_name }}
+          
           # RELEASE TITLE
           # Uses the tag name (e.g. "Context Menu Switcher cms-v1.0.1")
-          name: Context Menu Switcher ${{ github.ref_name }}
+          name: Context Menu Switcher ${{ steps.setup.outputs.tag_name }}
           
-          # RELEASE DESCRIPTION (Markdown format supported)
+          # ENHANCED RELEASE DESCRIPTION (Markdown format supported)
           body: |
-            # 🎯 Context Menu Switcher Release ${{ github.ref_name }}
+            # 🎯 Context Menu Switcher Release ${{ steps.setup.outputs.tag_name }}
+            
+            ## ⬇️ **DOWNLOAD THIS FILE:** 
+            **📁 `context-menu-switcher-release.zip`** ← Click here to download!
+            
+            ## ⚠️ **IGNORE the following files:**
+            - ❌ Source code (zip) - Contains entire repository 
+            - ❌ Source code (tar.gz) - Contains entire repository
+            
+            ---
             
             This release contains **exclusively** the files for the Context Menu Switcher.
             
@@ -90,21 +192,26 @@ jobs:
             - ✅ **Context-Menu-Switcher.ps1** - Main PowerShell script
             - ✅ **ReadMe.md** - Detailed documentation and instructions
             - ✅ **en-us.json** - English language file
+            - ✅ **release.zip** - Pre-compiled version (if available)
             
             ## 🚀 Installation:
-            1. Download the ZIP file
-            2. Extract to desired folder
+            1. Download the `context-menu-switcher-release.zip` file above
+            2. Extract to your desired folder
             3. Open PowerShell as Administrator
-            4. Run script: `.\Context-Menu-Switcher.ps1`
+            4. Navigate to the extracted folder
+            5. Run script: `.\Context-Menu-Switcher.ps1`
             
             ## ⚠️ System Requirements:
             - Windows 10/11
             - PowerShell 5.1 or higher
             - Administrator privileges required
             
-            ## 🔄 Changelog:
-            - Automatically generated on ${{ github.event.head_commit.timestamp }}
-            - Commit: ${{ github.sha }}
+            ## 🔧 Trigger Information:
+            - **Trigger Type:** ${{ github.event_name == 'workflow_dispatch' && 'Manual' || 'Automatic (Tag Push)' }}
+            - **Generated:** ${{ github.event.head_commit.timestamp || 'Manual trigger' }}
+            - **Commit:** ${{ github.sha }}
+            
+            ${{ github.event.inputs.release_notes != '' && format('## 📝 Additional Notes:\n{0}', github.event.inputs.release_notes) || '' }}
             
             ---
             *This release was automatically created by GitHub Actions.*
@@ -122,15 +229,38 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           
-      # STEP 4: Confirm success (Optional, but helpful for debugging)
-      - name: Confirm release creation
+      # STEP 6: Confirm success with enhanced logging
+      # Optional, but helpful for debugging and monitoring
+      - name: Confirm release creation and provide usage instructions
         run: |
+          TAG_NAME="${{ steps.setup.outputs.tag_name }}"
+          TRIGGER_TYPE="${{ github.event_name }}"
+          
           echo "🎉 Context Menu Switcher release successfully created!"
-          echo "📊 Release Info:"
-          echo "   - Tag: ${{ github.ref_name }}"
-          echo "   - Repository: ${{ github.repository }}"
-          echo "   - Commit: ${{ github.sha }}"
-          echo "   - Created on: $(date)"
           echo ""
-          echo "🌐 Release available at:"
-          echo "   https://github.com/${{ github.repository }}/releases/tag/${{ github.ref_name }}"
+          echo "📊 Release Information:"
+          echo "   🏷️  Tag: $TAG_NAME"
+          echo "   🔄  Trigger: $TRIGGER_TYPE"
+          echo "   📁  Repository: ${{ github.repository }}"
+          echo "   🔗  Commit: ${{ github.sha }}"
+          echo "   ⏰  Created: $(date '+%Y-%m-%d %H:%M:%S UTC')"
+          echo ""
+          echo "🌐 Release Links:"
+          echo "   📖  Release Page: https://github.com/${{ github.repository }}/releases/tag/$TAG_NAME"
+          echo "   💾  Direct Download: https://github.com/${{ github.repository }}/releases/download/$TAG_NAME/context-menu-switcher-release.zip"
+          echo ""
+          echo "🚀 Next Steps for Users:"
+          echo "   1. Visit the release page above"
+          echo "   2. Download 'context-menu-switcher-release.zip'"
+          echo "   3. Ignore the 'Source code' files"
+          echo "   4. Extract and run as Administrator"
+          echo ""
+          echo "🔧 For Developers:"
+          if [ "$TRIGGER_TYPE" = "workflow_dispatch" ]; then
+            echo "   • This release was created manually via GitHub Actions"
+            echo "   • To create another release, go to Actions → Context Menu Switcher Release → Run workflow"
+          else
+            echo "   • This release was created automatically by pushing tag: $TAG_NAME"
+            echo "   • To create another release, push a new cms-* tag or use manual trigger"
+          fi
+          echo "   • Manual trigger available at: https://github.com/${{ github.repository }}/actions/workflows/context-menu-switcher-release.yml"
