--- a/.github/workflows/power-ctrl-app-release.yml
+++ b/.github/workflows/power-ctrl-app-release.yml
@@ -24,7 +24,7 @@ on:
       tag_name:
         description: 'Tag name for the release (e.g., pca-v1.00.10)'
         required: true
-        #default: 'pca-v1.00.10'
+        default: 'pca-v1.00.10'
         type: string
       create_tag:
         description: 'Create the tag if it does not exist'
