--- a/.gitattributes
+++ b/.gitattributes
@@ -7,6 +7,8 @@ Context[[:space:]]Menu[[:space:]]Switcher/** export-ignore
 DLL-Icon-Viewer/** export-ignore  
 Demo.Fonts/** export-ignore
 HashGen[[:space:]]UI/** export-ignore
+HashGen[[:space:]]UI/v1.00.06/** export-ignore
+HashGen[[:space:]]UI/v1.01.00/** export-ignore
 Power.Ctrl.app/** export-ignore
 SysDaemon/** export-ignore
 
