--- a/.gitattributes
+++ b/.gitattributes
@@ -7,9 +7,9 @@ SysDaemon/** export-ignore
 Power.Ctrl.app/** export-ignore
 
 # Exclude specific project folders by using C-Style Quoting
+"Context Menu Switcher"/** export-ignore
 
 # Exclude specific project folders by using Backslash Escaping
-Context\ Menu\ Switcher/** export-ignore
 
 # Exclude specific project folders by using POSIX Character Classes
 DLL[-]Icon[-]Viewer/** export-ignore  
